--- a/env/.env
+++ b/env/.env
@@ -1,17 +1,21 @@
-VITE_APP_TITLE = 'cb'
+VITE_APP_TITLE = 'uni-app-temp'
 VITE_APP_PORT = 9000
 
 VITE_UNI_APPID = ''
 VITE_WX_APPID = ''
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
-VITE_APP_PUBLIC_BASE=/
+VITE_APP_PUBLIC_BASE='/assets/h5'
+# VITE_APP_PUBLIC_BASE='./'
+# VITE_APP_PUBLIC_BASE='/web-h5'
 
+# oss 上传地址
 VITE_UPLOAD_BASEURL = 'https://obs.cbyzx.com'
+
+VITE_WEB_URL = 'https://luckymoney.yunzhuxue.com/web-h5'
 
 # h5是否需要配置代理
 VITE_APP_PROXY=false
 VITE_APP_PROXY_PREFIX = '/api'
-# 版本号
+# 版本号-需要和flutter版本号同步
 VITE_VERSION = '1.0.0'
-
