--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "uni-app-temp",
-  "type": "commonjs",
+  "name": "wdxx",
   "version": "1.0.0",
-  "description": "uni-app-temp",
+  "description": "我的新乡",
   "author": {
     "name": "xdb",
-    "zhName": "cb",
-    "email": "1020103647@qq.com",
-    "github": "http://gitlab.chenbang-inc.cn/biz-frontend/fortune/fortune-h5.git"
+    "projectType": "uniapp",
+    "git": "http://gitlab.chenbang-inc.cn/frontbase/base/uni-app-temp.git",
+    "ossName": "",
+    "webUrl": ""
   },
-  "repository": "http://gitlab.chenbang-inc.cn/biz-frontend/fortune/fortune-h5.git",
+  "repository": "http://gitlab.chenbang-inc.cn/frontbase/base/uni-app-temp.git",
   "bugs": {
-    "url": "http://gitlab.chenbang-inc.cn/biz-frontend/fortune/fortune-h5.git/issues"
+    "url": "http://gitlab.chenbang-inc.cn/frontbase/base/uni-app-temp.git/issues"
   },
-  "homepage": "http://gitlab.chenbang-inc.cn/biz-frontend/fortune/fortune-h5.git",
+  "homepage": "http://gitlab.chenbang-inc.cn/frontbase/base/uni-app-temp.git",
   "engines": {
     "node": ">=20",
     "pnpm": ">=9.12"
@@ -48,7 +48,10 @@
     "build:app-ios": "uni build -p app-ios",
     "build:custom": "uni build -p",
     "build:h5": "uni build",
-    "build:h5test": "uni build --mode development",
+    "build:h5-test": "uni build --mode development",
+    "build:jenkins-test": "uni build --mode development && node scripts/jensink-zip-test.js",
+    "build:jenkins-prod": "uni build && node scripts/jensink-zip-prod.js",
+    "build:h5oss": "uni build --mode oss",
     "build": "uni build",
     "build:h5:ssr": "uni build --ssr",
     "build:mp-alipay": "uni build -p mp-alipay",
@@ -63,7 +66,6 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "prepare": "git init && husky install ",
     "type-check": "vue-tsc --noEmit",
     "cz": "czg"
   },
@@ -83,89 +85,87 @@
   },
   "dependencies": {
     "@cb-public/fetch-utils": "1.0.6",
-    "@dcloudio/uni-app": "3.0.0-4040520250104002",
-    "@dcloudio/uni-app-harmony": "3.0.0-4040520250104002",
-    "@dcloudio/uni-app-plus": "3.0.0-4040520250104002",
-    "@dcloudio/uni-components": "3.0.0-4040520250104002",
-    "@dcloudio/uni-h5": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-jd": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-lark": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-qq": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4040520250104002",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4040520250104002",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4040520250104002",
+    "@dcloudio/uni-app": "3.0.0-4050720250324001",
+    "@dcloudio/uni-app-plus": "3.0.0-4050720250324001",
+    "@dcloudio/uni-components": "3.0.0-4050720250324001",
+    "@dcloudio/uni-h5": "3.0.0-4050720250324001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4050720250324001",
     "dayjs": "1.11.13",
-    "js-md5": "^0.8.3",
+    "jquery": "3.7.1",
+    "js-md5": "0.8.3",
     "pinia": "2.3.1",
     "pinia-plugin-persistedstate": "3.2.1",
     "qs": "6.14.0",
     "vue": "3.4.21",
-    "vue-i18n": "^9.14.2",
-    "vue3-seamless-scroll": "^2.0.1",
-    "wot-design-uni": "^1.6.1",
-    "z-paging": "^2.8.4"
+    "vue3-seamless-scroll": "2.0.1",
+    "wot-design-uni": "1.7.1",
+    "z-paging": "2.8.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.3",
-    "@dcloudio/types": "^3.4.14",
-    "@dcloudio/uni-automator": "3.0.0-4040520250104002",
-    "@dcloudio/uni-cli-shared": "3.0.0-4040520250104002",
-    "@dcloudio/uni-stacktracey": "3.0.0-4040520250104002",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4040520250104002",
+    "@commitlint/cli": "18.6.1",
+    "@commitlint/config-conventional": "18.6.3",
+    "@dcloudio/types": "3.4.14",
+    "@dcloudio/uni-automator": "3.0.0-4050720250324001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4050720250324001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4050720250324001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4050720250324001",
     "@esbuild/darwin-arm64": "0.20.2",
     "@esbuild/darwin-x64": "0.20.2",
-    "@iconify-json/carbon": "^1.1.35",
-    "@rollup/rollup-darwin-x64": "^4.18.0",
-    "@types/node": "^20.14.2",
-    "@types/wechat-miniprogram": "^3.4.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@iconify-json/carbon": "1.1.35",
+    "@rollup/rollup-darwin-x64": "4.18.0",
+    "@types/jquery": "3.5.32",
+    "@types/node": "20.14.2",
+    "@types/qs": "6.9.18",
+    "@types/wechat-miniprogram": "3.4.7",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "@uni-helper/uni-app-types": "1.0.0-alpha.6",
     "@uni-helper/uni-types": "1.0.0-alpha.3",
-    "@uni-helper/vite-plugin-uni-layouts": "^0.1.10",
-    "@uni-helper/vite-plugin-uni-manifest": "^0.2.6",
+    "@uni-helper/vite-plugin-uni-layouts": "0.1.10",
+    "@uni-helper/vite-plugin-uni-manifest": "0.2.6",
     "@uni-helper/vite-plugin-uni-pages": "0.2.20",
-    "@uni-helper/vite-plugin-uni-platform": "^0.0.4",
-    "@unocss/preset-legacy-compat": "^65.4.3",
-    "@vue/runtime-core": "^3.5.13",
-    "@vue/tsconfig": "^0.1.3",
-    "autoprefixer": "^10.4.19",
-    "commitlint": "^18.6.1",
-    "czg": "^1.9.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.7",
-    "postcss": "^8.4.38",
-    "postcss-html": "^1.7.0",
-    "postcss-scss": "^4.0.9",
-    "rollup-plugin-visualizer": "^5.14.0",
-    "sass": "^1.77.5",
-    "stylelint": "^16.6.1",
-    "stylelint-config-html": "^1.1.0",
-    "stylelint-config-recess-order": "^4.6.0",
-    "stylelint-config-recommended": "^14.0.0",
-    "stylelint-config-recommended-scss": "^14.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-prettier": "^5.0.0",
-    "terser": "^5.31.1",
-    "typescript": "^5.5.4",
-    "unocss": "^65.4.3",
-    "unocss-applet": "^0.9.0",
-    "unplugin-auto-import": "^19.0.0",
-    "vconsole": "^3.15.1",
+    "@uni-helper/vite-plugin-uni-platform": "0.0.4",
+    "@unocss/preset-legacy-compat": "65.4.3",
+    "@vue/runtime-core": "3.5.13",
+    "@vue/tsconfig": "0.1.3",
+    "archiver": "7.0.1",
+    "autoprefixer": "10.4.19",
+    "commitlint": "18.6.1",
+    "crypto-js": "4.2.0",
+    "czg": "1.9.3",
+    "dotenv": "16.4.7",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-vue": "9.26.0",
+    "fs-extra": "11.3.0",
+    "husky": "8.0.3",
+    "lint-staged": "15.2.7",
+    "node-fetch": "2.7.0",
+    "postcss": "8.4.38",
+    "postcss-html": "1.7.0",
+    "postcss-scss": "4.0.9",
+    "rollup-plugin-visualizer": "5.14.0",
+    "sass": "1.77.5",
+    "stylelint": "16.6.1",
+    "stylelint-config-html": "1.1.0",
+    "stylelint-config-recess-order": "4.6.0",
+    "stylelint-config-recommended": "14.0.0",
+    "stylelint-config-recommended-scss": "14.0.0",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-prettier": "5.0.0",
+    "terser": "5.31.1",
+    "typescript": "5.5.4",
+    "unocss": "65.4.3",
+    "unocss-applet": "0.9.0",
+    "unplugin-auto-import": "19.0.0",
+    "vconsole": "3.15.1",
     "vite": "5.2.8",
-    "vite-plugin-restart": "^0.4.2",
-    "vue-tsc": "^1.8.27"
-  }
+    "vite-plugin-restart": "0.4.2",
+    "vue-tsc": "1.8.27"
+  },
+  "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
