--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "cb",
+  "name": "uni-app-temp",
   "appid": "",
   "description": "",
   "versionName": "1.0.0",
@@ -105,7 +105,7 @@
   "vueVersion": "3",
   "h5": {
     "router": {
-      "base": "/"
+      "base": "/assets/h5"
     }
   }
 }
