--- a/env/.env.development
+++ b/env/.env.development
@@ -10,4 +10,4 @@ VITE_SHOW_SOURCEMAP = true
 # 请求地址
 VITE_SERVER_BASEURL = 'https://test-api-luckydraw.cbyzx.com'
 VITE_RICH_BASE = 'https://test-api-rich.cbyzx.com'
-
+VITE_TF_BASE = 'https://test-console-api-city.cbyzx.com'
