--- a/env/.env.production
+++ b/env/.env.production
@@ -9,4 +9,4 @@ VITE_SHOW_SOURCEMAP = false
 # 请求地址
 VITE_SERVER_BASEURL = 'https://api-luckydraw.cbyzx.com'
 VITE_RICH_BASE = 'https://api-rich.cbyzx.com'
-
+VITE_TF_BASE = 'https://console-api-city.cbyzx.com'
