--- a/env/.env
+++ b/env/.env
@@ -12,6 +12,7 @@ VITE_APP_PUBLIC_BASE='/assets/h5'
 # oss 上传地址
 VITE_UPLOAD_BASEURL = 'https://obs.cbyzx.com'
 
+VITE_WEB_BASE = 'https://luckymoney.yunzhuxue.com'
 VITE_WEB_URL = 'https://luckymoney.yunzhuxue.com/web-h5'
 
 # h5是否需要配置代理
