--- a/package.json
+++ b/package.json
@@ -85,11 +85,12 @@
   },
   "dependencies": {
     "@cb-public/fetch-utils": "1.0.6",
-    "@dcloudio/uni-app": "3.0.0-4050720250324001",
-    "@dcloudio/uni-app-plus": "3.0.0-4050720250324001",
-    "@dcloudio/uni-components": "3.0.0-4050720250324001",
-    "@dcloudio/uni-h5": "3.0.0-4050720250324001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4050720250324001",
+    "@dcloudio/uni-app": "3.0.0-4060620250520001",
+    "@dcloudio/uni-app-plus": "3.0.0-4060620250520001",
+    "@dcloudio/uni-components": "3.0.0-4060620250520001",
+    "@dcloudio/uni-h5": "3.0.0-4060620250520001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4060620250520001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4060620250520001",
     "dayjs": "1.11.13",
     "js-md5": "0.8.3",
     "pinia": "2.3.1",
@@ -103,10 +104,10 @@
     "@commitlint/cli": "18.6.1",
     "@commitlint/config-conventional": "18.6.3",
     "@dcloudio/types": "3.4.14",
-    "@dcloudio/uni-automator": "3.0.0-4050720250324001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4050720250324001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4050720250324001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4050720250324001",
+    "@dcloudio/uni-automator": "3.0.0-4060620250520001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4060620250520001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4060620250520001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4060620250520001",
     "@esbuild/darwin-arm64": "0.20.2",
     "@esbuild/darwin-x64": "0.20.2",
     "@iconify-json/carbon": "1.1.35",
