--- a/package.json
+++ b/package.json
@@ -85,29 +85,29 @@
   },
   "dependencies": {
     "@cb-public/fetch-utils": "1.2.0",
-    "@dcloudio/uni-app": "3.0.0-4070520250711001",
-    "@dcloudio/uni-app-plus": "3.0.0-4070520250711001",
-    "@dcloudio/uni-components": "3.0.0-4070520250711001",
-    "@dcloudio/uni-h5": "3.0.0-4070520250711001",
-    "@dcloudio/uni-mp-harmony": "3.0.0-4070520250711001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4070520250711001",
-    "dayjs": "1.11.13",
+    "@dcloudio/uni-app": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080520251106001",
+    "@dcloudio/uni-components": "3.0.0-4080520251106001",
+    "@dcloudio/uni-h5": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080520251106001",
+    "dayjs": "1.11.19",
     "js-md5": "0.8.3",
     "pinia": "2.3.1",
     "pinia-plugin-persistedstate": "3.2.1",
     "vue": "3.4.21",
     "vue3-seamless-scroll": "2.0.1",
-    "wot-design-uni": "1.12.4",
-    "z-paging": "2.8.7"
+    "wot-design-uni": "1.13.0",
+    "z-paging": "2.8.8"
   },
   "devDependencies": {
     "@commitlint/cli": "18.6.1",
     "@commitlint/config-conventional": "18.6.3",
     "@dcloudio/types": "3.4.14",
-    "@dcloudio/uni-automator": "3.0.0-4070520250711001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4070520250711001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4070520250711001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4070520250711001",
+    "@dcloudio/uni-automator": "3.0.0-4080520251106001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080520251106001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@esbuild/darwin-arm64": "0.20.2",
     "@esbuild/darwin-x64": "0.20.2",
     "@iconify-json/carbon": "1.1.35",
@@ -129,6 +129,7 @@
     "@vue/tsconfig": "0.1.3",
     "archiver": "7.0.1",
     "autoprefixer": "10.4.19",
+    "code-inspector-plugin": "^1.3.0",
     "commitlint": "18.6.1",
     "crypto-js": "4.2.0",
     "czg": "1.9.3",
